# cjk-visual-context-bench

./: .gitignore  Cargo.toml  README.md
fixtures/: demo.txt
fixtures/archives/omp-snapcompact-cjk-window-029/: eventized.txt  (+4 more)
fonts/: fonts.lock.json
matrices/: archive-recall-readability.json  archive-recall-tuning.json  exact-formatting-followup.json  exact-formatting.json  font-smoke.json  pixel-smoke.json  smoke.json  zpix-basic.json  zpix-density.json  zpix-engineering-balance.json
prompts/: ocr.txt
reports/: archive-recall-2026-07-05.csv  archive-recall-2026-07-05.md  archive-recall-readability-2026-07-05.csv  archive-recall-readability-2026-07-05.md  archive-recall-readability-answers-2026-07-05.csv  archive-recall-structured-2026-07-05.csv  archive-recall-structured-2026-07-05.md  archive-recall-structured-answers-2026-07-05.csv  archive-recall-tuning-2026-07-05.csv  archive-recall-tuning-2026-07-05.md  archive-recall-tuning-answers-2026-07-05.csv  archive-render-density-2026-07-05.csv  archive-render-density-2026-07-05.md  eventized-archive-density-2026-07-05.csv  eventized-archive-density-2026-07-05.md  exact-formatting-2026-07-05.csv  exact-formatting-2026-07-05.md  usf1-v0.1-longbench.md
scripts/: eval-demo.sh  fetch-fonts.sh  import-longbench-subset.ts  matrix-smoke.sh  ocr-demo.sh  preview-server.ts  qa-smoke.sh  render-demo.sh  usf1-bench-run.ts  usf1-bench-summarize.ts  usf1-frontier-svg.ts  usf1-report.ts
src/: archive.rs  archive_qa.rs  config.rs  eval.rs  main.rs  matrix.rs  ocr.rs  probes.rs  qa.rs  render.rs
web/: preview.html
(+166 files in other folders)
