[package]
name = "cjk-visual-context-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
base64 = "0.22.1"
image = "0.25.10"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusttype = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
